[package]
name = "year2020"
version = "0.1.0"
authors = ["Dima Starkov <dvstark@yandex.ru>"]
edition = "2018"

[[bin]]
name = "task1"
path = "src/task1.rs"

[[bin]]
name = "task2"
path = "src/task2.rs"

[[bin]]
name = "task3"
path = "src/task3.rs"

[[bin]]
name = "task4"
path = "src/task4.rs"

[[bin]]
name = "task5"
path = "src/task5.rs"

[[bin]]
name = "task6"
path = "src/task6.rs"

[[bin]]
name = "task7"
path = "src/task7.rs"

[[bin]]
name = "task8"
path = "src/task8.rs"

[[bin]]
name = "task9"
path = "src/task9.rs"

[[bin]]
name = "task10"
path = "src/task10.rs"

[[bin]]
name = "task11"
path = "src/task11.rs"

[dependencies]
regex = "1"
