[package]
name = "year2023"
version = "0.1.0"
authors = ["Dima Starkov <dvstark@yandex.ru>"]
edition = "2021"

[[bin]]
name = "task1"
path = "src/task1.rs"

[[bin]]
name = "task2"
path = "src/task2.rs"

[[bin]]
name = "task3"
path = "src/task3.rs"

[dependencies]
itertools = "0.12.0"
onig = "6.4.0"
